@@ -1127,6 +1127,12 @@ poi_t CCanvas::findPOICloseBy(const QPoint& px) const
     return map->findPOICloseBy(px);
 }
 
+QList<poi_t> CCanvas::findPoisIn(const QRectF& degRect) const
+{
+    QList<poi_t> pois;
+    poi->findPoisIn(degRect, pois);
+    return pois;
+}
 void CCanvas::setup()
 {
     CCanvasSetup dlg(this);
