@@ -348,7 +348,7 @@ public:
     const searchValue_t getValueByKeyword(searchProperty_e keyword) override;
 
     static QString getLastName(const QString &name);
-    static void newWpt(QPointF& pt, const QString& name, const QString& desc, IGisProject *project);
+    static void newWpt(const QPointF &pt, const QString& name, const QString& desc, IGisProject *project, bool openEditWIndow = true);
     static bool getIconAndName(QString& icon, QString& name);
 
     static void drawCircle(QPainter& p, const QPointF& pos, const qreal& r, const bool &avoid, const bool &selected);
