@@ -6,29 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>31</width>
-    <height>363</height>
+    <width>60</width>
+    <height>458</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="spacing">
-    <number>3</number>
-   </property>
-   <property name="leftMargin">
-    <number>3</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
-    <number>0</number>
-   </property>
    <item>
     <widget class="QFrame" name="frameFunction">
      <property name="frameShape">
@@ -275,21 +260,6 @@
       <enum>QFrame::Plain</enum>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_4">
-      <property name="spacing">
-       <number>0</number>
-      </property>
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
-       <number>0</number>
-      </property>
       <item>
        <widget class="QToolButton" name="toolItemTrk">
         <property name="toolTip">
@@ -365,6 +335,27 @@
          <iconset resource="../resources.qrc">
           <normaloff>:/icons/32x32/Area.png</normaloff>
           <normalon>:/icons/32x32/AreaOn.png</normalon>:/icons/32x32/Area.png</iconset>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="toolItemPoi">
+        <property name="toolTip">
+         <string>Add POIs to selection.</string>
+        </property>
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../resources.qrc">
+          <normaloff>:/icons/32x32/MimePoiPOI.png</normaloff>
+          <normalon>:/icons/32x32/MimePoiPOIActive.png</normalon>:/icons/32x32/MimePoiPOI.png</iconset>
         </property>
         <property name="checkable">
          <bool>true</bool>
