@@ -164,6 +164,7 @@
         <file>../icons/32x32/MimeVRT.png</file>
         <file>../icons/32x32/MimeWMTS.png</file>
         <file>../icons/32x32/MimePoiPOI.png</file>
+        <file>../icons/32x32/MimePoiPOIActive.png</file>
         <file>../icons/32x32/MouseWheel.png</file>
         <file>../icons/32x32/Move.png</file>
         <file>../icons/32x32/MoveArrow.png</file>
